2005-09-08  Larry Jones  <lawrence.jones@ugs.com>

	* server.c (parseServerOptions): getopt() returns int, not char.

2005-09-07  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_parse): Minor reformatting.

	Close <http://savannah.nongnu.org/bugs/?func=detailitem&item_id=14462>.
	* rcs.c (RCS_parse): Free variable *after* using it for the last time.

2005-09-06  Derek Price  <derek@ximbiot.com>

	* sanity.sh (tempfile): All CVS temp files start with "cvs".

	* sanity.sh (tempfile): New var.
	(tempname): Set to $TMPDIR/$tempfile after $TMPDIR is set.
	(info): s#$TMPDIR/##.

	* rcs.c (RCS_putdtree): Remove unused variable.

2005-09-06  Mark D. Baushke  <mdb@gnu.org>

	Close <https://savannah.nongnu.org/bugs/?func=detailitem&item_id=14435>.
	* rcs.c (RCS_putdtree): Avoid stack overflow which may be
	possible with excessive recursive calls to RCS_putdtree().
	(Patch from Serg Masyutin.)

2005-09-06  Derek Price  <derek@ximbiot.com>

	Close <http://savannah.nongnu.org/bugs/?func=detailitem&item_id=14448>.
	* kerberos-client.c (start_kerberos4_server): Pass new root arg to
	make_bufs_from_fds.
	(Patch from <Manuel.Guijarro.AT.cern.ch>.)

	* server.c: Reorganize includes slightly and alphabetize sections.

	* server.c: #include canon-host.h.
	(gserver_authenticate_connection): Print out canon-host errors.
	* subr.c: #include canon-host.h.
	(isThisHost): Print out canon-host errors.

	* parseinfo.c (parse_config): Don't check hostname without client
	or server support.

	* main.c (main): Set cvs_cmd_name before calling parseServerOptions.

2005-09-05  Derek Price  <derek@ximbiot.com>

	* cvs.h (Tmpdir): Remove global decl.
	(get_cvs_tmp_dir, push_env_tmp_dir): New protos.
	* filesubr.c (cvs_temp_file): Use get_cvs_tmp_dir.
	* main.c (Tmpdir): Remove global.
	(tmpdir_cmdline, tmpdir_env): New globals.
	(get_cvs_tmp_dir, push_env_tmp_dir): New functions.
	(main): Discard most tmpdir overhead in favor of new globals and
	functions.
	* parseinfo.c (parse_config): Parse TmpDir.